<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/UI">
        <MultiSelectListPreference
            android:title="@string/pref_title_catalog_ui"
            android:entries="@array/pref_list_catalog_ui"
            android:entryValues="@array/pref_values_catalog_ui"
            android:defaultValue="@array/pref_values_catalog_ui"
            android:key="catalog_ui"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fullscreen"
            android:summary="@string/pref_desk_fullscreen"
            android:title="@string/pref_title_fullscreen" />
        <ListPreference
            android:title="@string/pref_title_ui_category"
            android:entries="@array/pref_ui_category"
            android:entryValues="@array/pref_val_ui_category"
            android:summary="@string/pref_desc_ui_category"
            android:key="ui_category"
            android:defaultValue="icon"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/OTHER">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_update"
            android:summary="@string/pref_desc_auto_update"
            android:title="@string/pref_title_auto_update" />
        <ListPreference
            android:title="@string/pref_title_start_category"
            android:entries="@array/pref_list_base_catalog"
            android:entryValues="@array/pref_list_base_catalog"
            android:summary="@string/pref_desc_start_category"
            android:key="start_catalog"
            android:defaultValue="Zooqle"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="exit"
            android:title="@string/pref_title_exit" />
    </PreferenceCategory>

</PreferenceScreen>
